Topbar z-index fixed.

--- a/opal-gwt-client/src/main/resources/org/obiba/opal/web/gwt/app/public/css/opal.css
+++ b/opal-gwt-client/src/main/resources/org/obiba/opal/web/gwt/app/public/css/opal.css
@@ -400,6 +400,7 @@ td.row-actions span {
 
 .topbar {
   background-color: #c65f00;
+  z-index: auto;
 }
 
 .topbar > .gwt-Label {
